--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -11,12 +11,94 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: url(../../assets/images/heading/img3.jpg) no-repeat center
+    background: url(../../assets/images/heading/img4.jpg) no-repeat center
       center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    @include breakpoint(lg) {
+      background: url(../../assets/images/heading/img3.jpg) no-repeat center
+        center fixed;
+    }
+  }
+}
+
+.card {
+  position: relative;
+
+  &__wrapper {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20rem;
+    @include breakpoint(md) {
+      padding-top: 20rem;
+    }
+    @include breakpoint(lg) {
+      max-width: 90rem;
+      padding-top: 35rem;
+    }
+    @include breakpoint(xlg) {
+      padding-top: 35rem;
+    }
+
+    &__content {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      @include breakpoint(md) {
+        justify-content: center;
+        flex-direction: row;
+      }
+
+      &__card {
+        background-color: var(--color-white);
+        box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+        color: var(--color-black);
+        margin: 0 1.5rem 1.5rem;
+        letter-spacing: 1px;
+        width: 25rem;
+        padding: 3rem;
+        @include breakpoint(sm) {
+          width: 40rem;
+        }
+        @include breakpoint(md) {
+          width: 60rem;
+          padding: 6rem;
+        }
+
+        p {
+          margin: 0 0 15px 0;
+          &:nth-child(2) {
+            @include breakpoint(lg) {
+              margin: 0 0 40px 0;
+            }
+          }
+        }
+
+        &__title {
+          font-size: 1.755rem;
+          letter-spacing: 1.5px;
+          font-weight: 600;
+          @include breakpoint(lg) {
+            font-size: 1.955rem;
+          }
+        }
+
+        &__content {
+          font-size: 1rem;
+          @include breakpoint(lg) {
+            font-size: 1.155rem;
+          }
+          span {
+            font-weight: 700;
+          }
+        }
+      }
+    }
   }
 }
 
