--- a/src/components/ScrollToButton/ScrollToButton.module.scss
+++ b/src/components/ScrollToButton/ScrollToButton.module.scss
@@ -14,7 +14,7 @@
   width: 50px;
   height: 50px;
   transform: rotate(-45deg);
-  @include breakpoint(lg) {
+  @include breakpoint(xlg) {
     width: 65px;
     height: 65px;
   }
@@ -29,7 +29,7 @@
     border-bottom: solid var(--color-white) 2px;
     border-right: solid transparent 2px;
     border-top: solid transparent 2px;
-    @include breakpoint(lg) {
+    @include breakpoint(xlg) {
       width: 30px;
       height: 30px;
       border-left: solid var(--color-white) 4px;
