--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,24 +3,14 @@
 
 .card {
   position: relative;
+  height: 100vh;
 
   &__wrapper {
     width: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10rem;
-    @include breakpoint(md) {
-      padding-top: 20rem;
-    }
-    @include breakpoint(lg) {
-      max-width: 90rem;
-      padding-top: 25rem;
-    }
-    @include breakpoint(xlg) {
-      padding-top: 35rem;
-    }
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
 
     &__content {
       display: flex;
@@ -36,10 +26,6 @@
         box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
         color: var(--color-black);
         margin: 0 1.5rem 1.5rem;
-        width: 25rem;
-        @include breakpoint(sm) {
-          width: 40rem;
-        }
         @include breakpoint(md) {
           width: 60rem;
         }
